erDiagram
    Tour ||--o{ TourImage : has
    Tour ||--o{ TourProgramFragment : has
    Tour ||--o{ TourPrice : has
    Tour ||--o{ TourInclusion : has
    Tour ||--o{ TourExclusion : has
    Tour ||--o{ TourAccommodation : has
    Tour }o--o{ Category : has
    Currency ||--o{ TourPrice : has

    Tour {
        int id PK
        string title
        string shortDescription
        string description
        boolean isBestSeller
        string location
        int durationDays
        timestamptz createdAt
        timestamptz updatedAt
    }

    TourAccommodation {
        int id PK
        int tourId FK
        AccommodationStars stars
        string hotelName
        timestamptz createdAt
        timestamptz updatedAt
    }

    TourInclusion {
        int id PK
        int tourId FK
        string description
        timestamptz createdAt
        timestamptz updatedAt
    }

    TourExclusion {
        int id PK
        int tourId FK
        string description
        timestamptz createdAt
        timestamptz updatedAt
    }

    TourImage {
        int id PK
        int tourId FK
        string url
        boolean isPrimary
        timestamptz createdAt
        timestamptz updatedAt
    }

    TourProgramFragment {
        int id PK
        int tourId FK
        int order
        string startTime
        string title
        string description
        timestamptz createdAt
        timestamptz updatedAt
    }

    Category {
        int id PK
        string name
        string description
        string imageUrl
        timestamptz createdAt
        timestamptz updatedAt
    }

    TourPrice {
        int id PK
        int tourId FK
        int currencyId FK
        float amount
        string comment
        timestamptz createdAt
        timestamptz updatedAt
    }

    Currency {
        int id PK
        string code
        timestamptz createdAt
        timestamptz updatedAt
    }